--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,12 +7,12 @@
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
   margin-bottom: 30px;
+  padding: 0 50px;
 }
 
 img{
@@ -48,4 +48,15 @@ span{
   font-size: 8px;
   color:white;
 }
-
+.link{
+  text-decoration: none;
+  color:white
+}
+input{
+  padding: 6px;
+  border-radius: 3px;width: 300px;
+}
+.action__container{
+  margin-top: auto;
+  margin-bottom: auto;
+}
