--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,3 @@
-/* .App {
-  text-align: center;
-} */
-
-
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
@@ -15,48 +10,127 @@
   padding: 0 50px;
 }
 
-img{
-  object-fit: fill;
-  width: 200px;
-  height: 300px;
+span {
+  position: absolute;
+  font-size: 8px;
+  color: white;
 }
 
-button{
-  margin-bottom: 20px;
+.link {
+  text-decoration: none;
+  color: white
+}
+
+input {
+  padding: 6px;
+  border-radius: 3px;
+  width: 300px;
+  margin: 0
+}
+
+.action__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+}
+
+.link__text {
+  text-decoration: none;
+  color: white;
+  margin-right: 10px;
+}
+
+.home__container {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+  gap: 40px 40px;
+  padding: 0 40px;
+}
+
+.prod__container {
+  background: white;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.prod__image {
+  width: 150px;
+  height: 200px;
+  object-fit: fill;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.prod__price__container {
+  border: 1px solid black;
+  /* display:flex;  */
+  /* align-items:center;  */
+  /* justify-content:space-between; */
+}
+
+.add__btn {
   background: salmon;
   border: none;
   padding: 8px;
-  border-radius: 3px;
+  border-radius: 5px;
+  font-weight: 600;
+  color: white;
   cursor: pointer;
 }
-button:hover,
-button:focus{
+
+.add__btn:hover {
   background: black;
   color: white;
 }
-#cart{
-  background: inherit;
+
+.cart__container {
+  display: block;
+  margin: 0 auto;
+  width: 30%;
+}
+
+.cart__image {
+  width: 70px;
+  height: 120px;
+  object-fit: fill;
+  margin-right: 20px;
+  padding: 10px 0;
+
+}
+
+.order__total-container {
+  display: flex;justify-content:space-between; margin-top:20px;
+  align-items: center;
+}
+
+.order__btn {
+  height: 40px;
+  width: 250px;
+  background-color: #282c34;
   color: white;
+  border-radius: 4px;
+  font-weight: 700;
 }
-#cart:hover,
-#cart:focus{
-  color: salmon;
-  position: relative;
+
+.order__btn:hover {
+  background-color: white;
+  color: #282c34;
+  border: 1px solid #282c34;
+  cursor: pointer;
 }
-span{
-  position: absolute;
-  font-size: 8px;
-  color:white;
+.cart__list{
+  height:62vh;overflow-y:auto;
 }
-.link{
-  text-decoration: none;
-  color:white
+.item__container{
+  display:flex;background: white;margin: 6px 0;padding:2px 15px;
 }
-input{
-  padding: 6px;
-  border-radius: 3px;width: 300px;
+.item__dlt_container{
+  display:flex;justify-content:space-between; align-items:center;
 }
-.action__container{
-  margin-top: auto;
-  margin-bottom: auto;
+.login__container{
+  display: block;
+  margin: 0 auto;
+  width: 30%;
 }
